syntax = "proto3";

package todo;

service todoService {
    rpc PostTodo(PostTodoDTO) returns (Todo) {}
    rpc GetTodo(Empty) returns (Todos) {}
}

message Todo {
    int32 id = 1;
    string title = 2;
    string description = 3;
    bool isDone = 4;
}

message Todos {
   repeated Todo Todos = 1;
}

message PostTodoDTO {
    string title = 1;
    string description = 2;
    bool isDone = 3;
}

message Empty {}